fix the slider image on small screen

--- a/assets/styles/reify-style.css
+++ b/assets/styles/reify-style.css
@@ -1823,3 +1823,7 @@ section .container {
 	z-index: 1000;
 	background: linear-gradient(#FFF, 99%, #D3D3D3);
 }
+
+.about-us-right-text {
+	font-size: 1.3em;
+}
